fixed header for mobile, fixed highlights section on the front page, added a small sentence above the highlights, fixed publications page on mobile

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -116,9 +116,56 @@ $breakpoints: (
     width: 100vw;
     height: 30vw;
     
-    @include breakpoint(mobile) {
-      width: 590px;
-      height: auto; /* Adjust if needed for smaller screens */
+    @include breakpoint(laptopls){
+      margin-bottom: 34%
+    }
+  
+    @include breakpoint(laptopl){
+      margin-bottom: 32.9%
+    }
+  
+    @include breakpoint(default){
+      margin-bottom: 24.8%;
+    }
+  
+    @include breakpoint(wide) {
+      margin-bottom: 24.8%;
+    }
+  
+    @include breakpoint(laptopm) {
+      margin-bottom: 26.8%
+    }
+  
+    @include breakpoint(laptops) {
+      margin-bottom: 25.1%
+    }
+  
+    @include breakpoint(normal) {
+      margin-bottom: 25%;
+    }
+  
+    @include breakpoint(tablet){
+      margin-bottom: 22.4%;
+    }
+  
+    @include breakpoint(narrow) {
+      margin-bottom: 22%;
+    }
+  
+    @include breakpoint(narrower) {
+      margin-bottom: 11%;
+    }
+  
+    @include breakpoint(mobilel){
+      margin-bottom: -13%;
+    }
+  
+    @include breakpoint(mobilem){
+      margin-bottom : -22%;
+    }
+    
+    @include breakpoint(mobiles){
+      margin-bottom: -36%
     }
   }
 }
@@ -126,8 +173,8 @@ $breakpoints: (
 /* Container to hold the image and handle the cropping */
 .mySlides {
   position: relative;
-  width: 100%; /* Responsive width */
-  padding-top: 56.25%; /* Maintain 16:9 aspect ratio, adjust as needed */
+  width: 100%; 
+  padding-top: 56.25%; 
   overflow: hidden;
 }
 
@@ -136,17 +183,11 @@ $breakpoints: (
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%; /* Ensure the width spans the container */
-  height: 100%; /* Ensure the height spans the container */
-  object-fit: cover; /* Cover the container without scaling down */
-  z-index: -1; /* Optional: Move the image behind any potential content */
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover;
+  z-index: -1; 
 }
-
-// CtA on the front page
-#introducing-volttron {
-  font-weight: bold;
-}
-
 
 /* Caption text */
 .text {
@@ -226,12 +267,21 @@ $breakpoints: (
 .figConfigpdf h4 {
   line-height: 100%;
   font-size: 1vw;
-  font-size: 1vw; 
   line-height: 1.3vw; 
   margin-bottom: 1.2vw;
   text-align:left;
   max-width: 100%;
   color:black;
+
+  @include breakpoint(narrow){
+    line-height: 3vw;
+    font-size: 2vw
+  }
+
+  @include breakpoint(mobilel){
+    line-height: 4vw;
+    font-size: 3vw
+  }
 }
  
 .figConfigpdf figcaption{
@@ -243,6 +293,16 @@ $breakpoints: (
     text-align:left;
     max-width: 100%;
     color:black;
+
+    @include breakpoint(narrow){
+      line-height: 3vw;
+      font-size: 2vw
+    }
+    @include breakpoint(mobilel){
+      line-height: 4vw;
+      font-size: 3vw;
+      margin-top: 7px;
+    }
    }
 
 }
@@ -546,6 +606,22 @@ header {
   }
 }
 
+#highlights-heading {
+  text-align: center;
+  font-size: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+  
+  h1{
+    @include breakpoint(mobilel){
+      font-size: 15px;
+    }
+
+    @include breakpoint(mobiles){
+      font-size: 13px
+    }
+  }
+}
 
 .PlaylistFig{
   display: inline-table;
@@ -562,4 +638,11 @@ header {
     margin-bottom:0.1vw;
   }
 
+}
+
+/* Fix for squished logo on mobile */
+#titleBar{
+  span h1 a img{
+    width: 400px;
+  }
 }
